# kingcent_stereo_demo

./: CMakeLists.txt  README.md
parameters/: extrinsics.yml  intrinsics.yml
src/: binocular_calibration.cpp  binocular_demo.cpp
